tests/ui/type/pattern_types/reverse_range.stderr
error[E0080]: evaluation panicked: exclusive range end at minimum value of type
  --> $DIR/reverse_range.rs:7:36
   |
LL | const NONE: pattern_type!(u8 is 1..0) = unsafe { std::mem::transmute(3_u8) };
   |                                    ^ evaluation of `NONE::{constant#1}` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
